# django_api_best_practices

./: LICENSE  README.md  core.py  pyproject.toml
core/: models.py  services.py  views.py
